# AIE7

05_Our_First_Agent_with_LangGraph/: .gitignore  Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  package-lock.json  pyproject.toml  run_backend.py  vercel.json
05_Our_First_Agent_with_LangGraph/.cursor/rules/: backend-rule.mdc  frontend-rule.mdc  general-rule.mdc
05_Our_First_Agent_with_LangGraph/backend/: README.md  __init__.py  gunicorn_conf.py  main.py  models.py  requirements.txt
05_Our_First_Agent_with_LangGraph/backend/agents/: __init__.py  graph.py  multi_agent_graph.py  tools.py
05_Our_First_Agent_with_LangGraph/backend/aimakerspace/openai_utils/: embedding.py
05_Our_First_Agent_with_LangGraph/backend/core/: __init__.py  qdrant_client.py
05_Our_First_Agent_with_LangGraph/backend/rag/: __init__.py  ingest.py  prompts.py  retrieve.py
05_Our_First_Agent_with_LangGraph/backend/routers/: chess_analysis.py  health.py  knowledge.py
05_Our_First_Agent_with_LangGraph/backend/tools/: __init__.py  chess_tools.py
05_Our_First_Agent_with_LangGraph/backend/utils/: chess_parsers.py  logging.py  qdrant_client.py
05_Our_First_Agent_with_LangGraph/frontend/: .eslintrc.json  README.md  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
05_Our_First_Agent_with_LangGraph/frontend/.next/: _events.json  trace
05_Our_First_Agent_with_LangGraph/frontend/.next/server/: _error.js
05_Our_First_Agent_with_LangGraph/frontend/.next/server/pages/: 404.js  _app.js  _document.js  _error.js  index.js
05_Our_First_Agent_with_LangGraph/frontend/.next/server/vendor-chunks/: @headlessui.js  @heroicons.js  @swc.js  next.js
05_Our_First_Agent_with_LangGraph/frontend/components/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  ChessThemeWrapper.tsx  KnowledgeModal.tsx  LoadingDots.tsx  SettingsModal.tsx
05_Our_First_Agent_with_LangGraph/frontend/contexts/: SettingsContext.tsx
05_Our_First_Agent_with_LangGraph/frontend/hooks/: useAutoScroll.ts  useChatStream.ts
05_Our_First_Agent_with_LangGraph/frontend/pages/: 404.tsx  _app.tsx  _document.tsx  index.tsx
05_Our_First_Agent_with_LangGraph/frontend/styles/: globals.css
05_Our_First_Agent_with_LangGraph/frontend/tests/: ChatInput.test.tsx  ChatMessage.test.tsx
05_Our_First_Agent_with_LangGraph/frontend/utils/: api.ts  markdownPlugins.ts  markdownPlugins.tsx
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb  pyproject.toml
06_Multi_Agent_with_LangGraph/content/data/6996af12/: Student_Loan_Policies_Low_Income_Students_Outline  Student_Loan_Policies_Low_Income_Students_Outline_Empathetic
06_Multi_Agent_with_LangGraph/content/data/6e51bfd0/: student_loans_low_income_students_response.txt
06_Multi_Agent_with_LangGraph/content/data/c6cb22de/: response_student_loans_low_income_students.txt
06_Multi_Agent_with_LangGraph/content/data/f2529e0d/: Student_Loans_Low_Income_Students_Response.txt
(+69 files in other folders)
