[project]
name = "05-our-first-agent-with-langgraph"
version = "0.1.0"
description = "Chess.com LangGraph Agent with FastAPI Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "jupyter>=1.1.1",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "langsmith>=0.4.4",
    "tavily-python>=0.7.9",
    # Backend dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "gunicorn>=21.2.0",
    "langchain>=0.1.0",
    "openai>=1.12.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "chess>=1.10.0",
    "python-chess>=1.999",
    "python-multipart>=0.0.6",
    "qdrant-client>=1.7.0",
]
