[project]
name = "06-multi-agent-with-langgraph"
version = "0.1.0"
description = "Multi Agent Workflow with LangGraph"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.5.2",
    "langchain-core>=0.1.30",
    "pymupdf>=1.26.3",
    "pyppeteer>=2.0.0",
    "tavily-python>=0.7.9",
    "arxiv>=2.1.1",
    "networkx>=3.0",
    "matplotlib>=3.8.0",
]

# System dependencies required for pyppeteer/Chromium (install via apt):
# libnss3, libatk-bridge2.0-0, libgtk-3-0, libxss1, libasound2, libx11-xcb1, libxcomposite1, libxdamage1, libxrandr2, libgbm1, libpango-1.0-0, libpangocairo-1.0-0, libatspi2.0-0, libdrm2, libxext6, libxfixes3, libxrender1, libxi6, libxtst6, libxcb1, libxinerama1, libxcursor1, libxss1, libxkbcommon0, libdbus-1-3
